--- a/index.html
+++ b/index.html
@@ -3,318 +3,128 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>dps.report HP% Formatter</title>
+    <title>Projects</title>
     <style>
       :root {
-        --bg: #fafafa;
-        --card: #ffffff;
-        --text: #18181b;
-        --muted: #52525b;
-        --border: #e4e4e7;
-        --danger-bg: #fef2f2;
-        --danger-border: #fecaca;
-        --danger-text: #991b1b;
-        --btn: #18181b;
-        --btn-text: #ffffff;
+        --bg: #0b1225;
+        --panel: rgba(255, 255, 255, 0.02);
+        --card: #0f172a;
+        --text: #e2e8f0;
+        --muted: #94a3b8;
+        --accent: #22d3ee;
+        --border: #1e293b;
       }
       * { box-sizing: border-box; }
       body {
         margin: 0;
-        font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-        background: var(--bg);
+        font-family: "Inter", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+        background: radial-gradient(circle at 20% 20%, rgba(34,211,238,0.08), transparent 24%),
+                    radial-gradient(circle at 80% 0%, rgba(34,211,238,0.05), transparent 30%),
+                    var(--bg);
         color: var(--text);
       }
-      .wrap { max-width: 980px; margin: 0 auto; padding: 24px; }
-      .card {
-        background: var(--card);
+      .wrap {
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 48px 20px 64px;
+      }
+      .container {
+        width: min(1100px, 100%);
+        display: grid;
+        gap: 18px;
+        color: var(--text);
+      }
+      .header {
+        background: linear-gradient(135deg, rgba(255,255,255,0.04), rgba(255,255,255,0));
+        border: 1px solid var(--border);
+        border-radius: 20px;
+        padding: 24px;
+        box-shadow: 0 10px 40px rgba(0,0,0,0.2);
+      }
+      h1 {
+        margin: 0;
+        font-size: 28px;
+        letter-spacing: -0.01em;
+      }
+      p { margin: 8px 0 0; color: var(--muted); line-height: 1.6; }
+      .grid {
+        display: grid;
+        gap: 16px;
+        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      }
+      .tile {
+        background: linear-gradient(135deg, rgba(255,255,255,0.03), rgba(255,255,255,0));
         border: 1px solid var(--border);
         border-radius: 18px;
         padding: 18px;
-        box-shadow: 0 1px 2px rgba(0,0,0,.04);
-        margin-bottom: 18px;
-      }
-      h1 { font-size: 20px; margin: 0 0 6px; }
-      h2 { font-size: 16px; margin: 0; }
-      p { margin: 0; color: var(--muted); font-size: 13px; line-height: 1.4; }
-      label { display: flex; flex-direction: column; gap: 6px; font-size: 13px; }
-      .grid {
         display: grid;
-        grid-template-columns: 1fr;
         gap: 12px;
-        margin-top: 14px;
+        position: relative;
+        transition: transform 120ms ease, border-color 120ms ease;
       }
-      @media (min-width: 820px) {
-        .grid { grid-template-columns: 1fr 1fr auto; align-items: end; }
+      .tile:hover {
+        transform: translateY(-2px);
+        border-color: rgba(34,211,238,0.5);
       }
-      input, textarea {
-        width: 100%;
+      .tile h2 { margin: 0; font-size: 18px; letter-spacing: -0.01em; }
+      .tile p { margin: 0; }
+      .pill {
+        display: inline-flex;
+        align-items: center;
+        gap: 6px;
+        padding: 6px 10px;
+        border-radius: 999px;
         border: 1px solid var(--border);
-        border-radius: 14px;
-        padding: 10px 12px;
-        font-size: 13px;
-        outline: none;
-        background: white;
+        background: rgba(255,255,255,0.02);
+        color: var(--muted);
+        font-size: 12px;
       }
-      textarea { min-height: 180px; resize: vertical; }
-      .row { display: flex; gap: 10px; align-items: center; }
-      .btn {
-        border: 1px solid transparent;
-        border-radius: 16px;
-        padding: 10px 14px;
-        font-size: 13px;
+      .link-row {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+        color: var(--accent);
         font-weight: 600;
-        cursor: pointer;
-        user-select: none;
       }
-      .btn.primary { background: var(--btn); color: var(--btn-text); }
-      .btn.ghost { background: white; border-color: var(--border); color: var(--text); }
-      .btn:disabled { opacity: .6; cursor: not-allowed; }
-      .meta { margin-top: 8px; font-size: 12px; color: var(--muted); }
-      .error {
-        margin-top: 14px;
-        border: 1px solid var(--danger-border);
-        background: var(--danger-bg);
-        color: var(--danger-text);
-        border-radius: 16px;
-        padding: 10px 12px;
-        font-size: 13px;
-        white-space: pre-wrap;
+      .link-row span { color: var(--accent); }
+      .link-row svg { flex-shrink: 0; }
+      a.tile-link {
+        position: absolute;
+        inset: 0;
+        border-radius: 18px;
+        text-indent: -9999px;
       }
-      .header-row { display: flex; align-items: center; justify-content: space-between; gap: 12px; }
-      .note { font-size: 12px; color: var(--muted); margin-top: 10px; }
-      code.kbd { background: #f4f4f5; border: 1px solid var(--border); padding: 2px 6px; border-radius: 8px; }
     </style>
   </head>
   <body>
     <div class="wrap">
-      <div class="card">
-        <h1>dps.report HP% Formatter</h1>
-        <p>
-          Paste permalinks/URIs (one per line). Click run to fetch the final target HP% and build a Discord-friendly block.
-        </p>
-
-        <div class="grid">
-          <label>
-            <span><strong>Title</strong></span>
-            <input id="title" value="Temple of Febe CM" placeholder="Temple of Febe CM" />
-          </label>
-
-          <label>
-            <span><strong>Time (local)</strong></span>
-            <input id="time" value="19:00" placeholder="19:00" inputmode="numeric" />
-            <span class="meta">Used for <code class="kbd">&lt;t:…:F&gt;</code> timestamp (today).</span>
-          </label>
-
-          <div class="row">
-            <button id="run" class="btn primary">Run</button>
-            <button id="clearCache" class="btn ghost" title="Clears the in-memory cache">Clear cache</button>
-          </div>
+      <div class="container">
+        <div class="header">
+          <h1>Projects</h1>
+          <p>A small hub for utilities and experiments. Pick a tile to jump into a project.</p>
         </div>
 
-        <div style="margin-top: 14px;">
-          <label>
-            <span><strong>Input</strong></span>
-            <textarea id="input" placeholder="https://dps.report/abcd-20250101-190000_boss
-https://dps.report/efgh-20250101-190900_boss"></textarea>
-          </label>
-          <div id="parsed" class="meta">Parsed: 0 lines</div>
+        <div class="grid" role="list">
+          <article class="tile" role="listitem">
+            <div class="pill" aria-hidden="true">Guild Wars 2</div>
+            <div>
+              <h2>dps.report Discord formatter</h2>
+              <p>Format dps.report logs into a Discord-friendly block with sorted HP% values.</p>
+            </div>
+            <div class="link-row" aria-hidden="true">
+              <span>Open formatter</span>
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.5 3H13V10.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+            <a class="tile-link" href="/gw2_logs_discord/">dps.report Discord formatter</a>
+          </article>
         </div>
-
-        <div id="error" class="error" style="display:none"></div>
-      </div>
-
-      <div class="card">
-        <div class="header-row">
-          <h2>Output</h2>
-          <div class="row">
-            <button id="copy" class="btn ghost" disabled>Copy</button>
-            <button id="clearOut" class="btn ghost" disabled>Clear</button>
-          </div>
-        </div>
-
-        <textarea id="output" readonly placeholder="Run to generate output…"></textarea>
-
-        <div class="note">
-          Notes: sorting matches the Python intent (third hyphen-separated segment of the URI). Cache is per page load.
-        </div>
-      </div>
-
-      <div class="note">
-        Tip: If you hit CORS issues, host behind a tiny proxy (or in a context where dps.report allows your origin).
       </div>
     </div>
-
-    <script>
-      // ===== Port of your Python snippet (pure JS) =====
-
-      // Simple in-memory cache (persists for the lifetime of the page)
-      const hpCache = new Map();
-
-      async function cachedGetHp(logUri) {
-        if (hpCache.has(logUri)) return hpCache.get(logUri);
-
-        const url = `https://dps.report/getJson?permalink=${encodeURIComponent(logUri)}`;
-        const res = await fetch(url);
-        if (!res.ok) throw new Error(`HTTP ${res.status} fetching ${logUri}`);
-        const json = await res.json();
-
-        // Python: json()['targets'][0]['healthPercents'][-1][1]
-        const targets = json?.targets;
-        const healthPercents = targets?.[0]?.healthPercents;
-        const last = Array.isArray(healthPercents) && healthPercents.length
-          ? healthPercents[healthPercents.length - 1]
-          : null;
-        const value = Array.isArray(last) ? last[1] : null;
-
-        if (typeof value !== "number") {
-          throw new Error(`Could not find healthPercents[-1][1] for ${logUri}`);
-        }
-
-        hpCache.set(logUri, value);
-        return value;
-      }
-
-      function localDateWithTimeToUnixSeconds(hour, minute) {
-        // Matches Python's:
-        // datetime.combine(date.today(), time(19)).astimezone().timestamp()
-        // In JS: create local Date and convert to Unix seconds.
-        const now = new Date();
-        const dt = new Date(now.getFullYear(), now.getMonth(), now.getDate(), hour, minute, 0, 0);
-        return Math.floor(dt.getTime() / 1000);
-      }
-
-      function formatHp(v) {
-        // Python: f"{v:.02f}" -> always 2 decimals
-        return Number(v).toFixed(2);
-      }
-
-      function extractSortKey(logUri) {
-        // Python used: key=lambda l: l.split("-")[2]
-        // We'll apply that intent to the URI itself.
-        const parts = String(logUri).split("-");
-        return parts[2] ?? "";
-      }
-
-      function parseLines(text) {
-        return text
-          .split(/\r?\n/)
-          .map((s) => s.trim())
-          .filter(Boolean);
-      }
-
-      function parseTimeHHMM(s) {
-        const m = /^([01]\d|2[0-3]):([0-5]\d)$/.exec(String(s).trim());
-        if (!m) return null;
-        return { hour: Number(m[1]), minute: Number(m[2]) };
-      }
-
-      // ===== UI wiring =====
-      const elTitle = document.getElementById("title");
-      const elTime = document.getElementById("time");
-      const elInput = document.getElementById("input");
-      const elOutput = document.getElementById("output");
-      const elParsed = document.getElementById("parsed");
-      const elError = document.getElementById("error");
-
-      const btnRun = document.getElementById("run");
-      const btnCopy = document.getElementById("copy");
-      const btnClearOut = document.getElementById("clearOut");
-      const btnClearCache = document.getElementById("clearCache");
-
-      function setError(msg) {
-        if (!msg) {
-          elError.style.display = "none";
-          elError.textContent = "";
-          return;
-        }
-        elError.style.display = "block";
-        elError.textContent = msg;
-      }
-
-      function setRunning(isRunning) {
-        btnRun.disabled = isRunning;
-        btnRun.textContent = isRunning ? "Running…" : "Run";
-        elTitle.disabled = isRunning;
-        elTime.disabled = isRunning;
-        elInput.disabled = isRunning;
-        btnClearCache.disabled = isRunning;
-      }
-
-      function updateParsedCount() {
-        const count = parseLines(elInput.value).length;
-        elParsed.textContent = `Parsed: ${count} line${count === 1 ? "" : "s"}`;
-      }
-
-      function setOutput(text) {
-        elOutput.value = text || "";
-        const has = Boolean(text);
-        btnCopy.disabled = !has;
-        btnClearOut.disabled = !has;
-      }
-
-      elInput.addEventListener("input", updateParsedCount);
-      updateParsedCount();
-
-      btnClearCache.addEventListener("click", () => {
-        hpCache.clear();
-        setError("");
-      });
-
-      btnClearOut.addEventListener("click", () => setOutput(""));
-
-      btnCopy.addEventListener("click", async () => {
-        const text = elOutput.value;
-        if (!text) return;
-        try {
-          await navigator.clipboard.writeText(text);
-        } catch {
-          // Fallback: select + execCommand
-          elOutput.focus();
-          elOutput.select();
-          document.execCommand("copy");
-        }
-      });
-
-      btnRun.addEventListener("click", async () => {
-        setError("");
-        setOutput("");
-
-        const t = parseTimeHHMM(elTime.value);
-        if (!t) {
-          setError("Time must be HH:MM (24h), e.g. 19:00");
-          return;
-        }
-
-        const logUris = parseLines(elInput.value);
-        if (logUris.length === 0) {
-          setError("Paste at least one log URI/permalink (one per line).\n");
-          return;
-        }
-
-        setRunning(true);
-        try {
-          // data = {log_uri: cached_get_hp(log_uri) for log_uri in log_uris}
-          const entries = await Promise.all(
-            logUris.map(async (uri) => {
-              const hp = await cachedGetHp(uri);
-              return { uri, hp, key: extractSortKey(uri) };
-            })
-          );
-
-          // by_time = sorted([...], key=...)
-          entries.sort((a, b) => String(a.key).localeCompare(String(b.key)));
-
-          const lines = entries.map(({ uri, hp }) => `\`${formatHp(hp)}\` ${uri}`);
-          const ts = localDateWithTimeToUnixSeconds(t.hour, t.minute);
-          const header = `${elTitle.value || "Temple of Febe CM"} <t:${ts}:F>`;
-
-          setOutput([header, ...lines].join("\n"));
-        } catch (e) {
-          setError(e instanceof Error ? e.message : String(e));
-        } finally {
-          setRunning(false);
-        }
-      });
-    </script>
   </body>
 </html>
