--- a/index.html
+++ b/index.html
@@ -123,6 +123,22 @@
             </div>
             <a class="tile-link" href="/gw2_logs_discord/">dps.report Discord formatter</a>
           </article>
+
+          <article class="tile" role="listitem">
+            <div class="pill" aria-hidden="true">Math lab</div>
+            <div>
+              <h2>Optimal Allocation helper</h2>
+              <p>Explore calculus-backed allocations with live tables for the next best distributions.</p>
+            </div>
+            <div class="link-row" aria-hidden="true">
+              <span>Open Upload Labs</span>
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.5 3H13V10.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+            <a class="tile-link" href="/upload_labs/">Upload Labs</a>
+          </article>
         </div>
       </div>
     </div>
