Add version note for upload labs calculator

--- a/upload_labs/index.html
+++ b/upload_labs/index.html
@@ -21,6 +21,12 @@
 <body>
   <h1>Optimal Distribution (calculus simplified)</h1>
 
+  <p>
+    Note: This calculator was created for Upload, Inc. v1.0 and may be outdated for 2.0.
+    It is based on the community guide at
+    <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3617188783">https://steamcommunity.com/sharedfiles/filedetails/?id=3617188783</a>.
+  </p>
+
   <div class="row">
     <label for="N">Total points (N &gt; 0):</label>
     <input id="N" type="number" min="1" step="1" value="10" />
