--- a/index.html
+++ b/index.html
@@ -125,6 +125,22 @@
           </article>
 
           <article class="tile" role="listitem">
+            <div class="pill" aria-hidden="true">Clash Royale</div>
+            <div>
+              <h2>Merge Tactics clan ranking</h2>
+              <p>Placeholder for the current season’s clan trophy leaderboard.</p>
+            </div>
+            <div class="link-row" aria-hidden="true">
+              <span>Open placeholder</span>
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.5 3H13V10.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </div>
+            <a class="tile-link" href="/clash_royale_merge_tactics/">Clash Royale Merge Tactics ranking</a>
+          </article>
+
+          <article class="tile" role="listitem">
             <div class="pill" aria-hidden="true">Math lab</div>
             <div>
               <h2>Optimal Allocation helper</h2>
