--- a/gw2_logs_discord/index.html
+++ b/gw2_logs_discord/index.html
@@ -4,86 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>dps.report Discord formatter</title>
-    <style>
-      :root {
-        --bg: #fafafa;
-        --card: #ffffff;
-        --text: #18181b;
-        --muted: #52525b;
-        --border: #e4e4e7;
-        --danger-bg: #fef2f2;
-        --danger-border: #fecaca;
-        --danger-text: #991b1b;
-        --btn: #18181b;
-        --btn-text: #ffffff;
-      }
-      * { box-sizing: border-box; }
-      body {
-        margin: 0;
-        font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-        background: var(--bg);
-        color: var(--text);
-      }
-      .wrap { max-width: 980px; margin: 0 auto; padding: 24px; }
-      .card {
-        background: var(--card);
-        border: 1px solid var(--border);
-        border-radius: 18px;
-        padding: 18px;
-        box-shadow: 0 1px 2px rgba(0,0,0,.04);
-        margin-bottom: 18px;
-      }
-      h1 { font-size: 20px; margin: 0 0 6px; }
-      h2 { font-size: 16px; margin: 0; }
-      p { margin: 0; color: var(--muted); font-size: 13px; line-height: 1.4; }
-      label { display: flex; flex-direction: column; gap: 6px; font-size: 13px; }
-      .grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 12px;
-        margin-top: 14px;
-      }
-      @media (min-width: 820px) {
-        .grid { grid-template-columns: 1fr 1fr auto; align-items: end; }
-      }
-      input, textarea {
-        width: 100%;
-        border: 1px solid var(--border);
-        border-radius: 14px;
-        padding: 10px 12px;
-        font-size: 13px;
-        outline: none;
-        background: white;
-      }
-      textarea { min-height: 180px; resize: vertical; }
-      .row { display: flex; gap: 10px; align-items: center; }
-      .btn {
-        border: 1px solid transparent;
-        border-radius: 16px;
-        padding: 10px 14px;
-        font-size: 13px;
-        font-weight: 600;
-        cursor: pointer;
-        user-select: none;
-      }
-      .btn.primary { background: var(--btn); color: var(--btn-text); }
-      .btn.ghost { background: white; border-color: var(--border); color: var(--text); }
-      .btn:disabled { opacity: .6; cursor: not-allowed; }
-      .meta { margin-top: 8px; font-size: 12px; color: var(--muted); }
-      .error {
-        margin-top: 14px;
-        border: 1px solid var(--danger-border);
-        background: var(--danger-bg);
-        color: var(--danger-text);
-        border-radius: 16px;
-        padding: 10px 12px;
-        font-size: 13px;
-        white-space: pre-wrap;
-      }
-      .header-row { display: flex; align-items: center; justify-content: space-between; gap: 12px; }
-      .note { font-size: 12px; color: var(--muted); margin-top: 10px; }
-      code.kbd { background: #f4f4f5; border: 1px solid var(--border); padding: 2px 6px; border-radius: 8px; }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="app.js"></script>
   </head>
   <body>
     <div class="wrap">
@@ -111,7 +33,7 @@
           </div>
         </div>
 
-        <div style="margin-top: 14px;">
+        <div class="section-spacing">
           <label>
             <span><strong>Input</strong></span>
             <textarea id="input" placeholder="https://dps.report/abcd-20250101-190000_boss
@@ -120,7 +42,7 @@ https://dps.report/efgh-20250101-190900_boss"></textarea>
           <div id="parsed" class="meta">Parsed: 0 lines</div>
         </div>
 
-        <div id="error" class="error" style="display:none"></div>
+        <div id="error" class="error"></div>
       </div>
 
       <div class="card">
@@ -144,177 +66,5 @@ https://dps.report/efgh-20250101-190900_boss"></textarea>
       </div>
     </div>
 
-    <script>
-      // ===== Port of your Python snippet (pure JS) =====
-
-      // Simple in-memory cache (persists for the lifetime of the page)
-      const hpCache = new Map();
-
-      async function cachedGetHp(logUri) {
-        if (hpCache.has(logUri)) return hpCache.get(logUri);
-
-        const url = `https://dps.report/getJson?permalink=${encodeURIComponent(logUri)}`;
-        const res = await fetch(url);
-        if (!res.ok) throw new Error(`HTTP ${res.status} fetching ${logUri}`);
-        const json = await res.json();
-
-        // Python: json()['targets'][0]['healthPercents'][-1][1]
-        const targets = json?.targets;
-        const healthPercents = targets?.[0]?.healthPercents;
-        const last = Array.isArray(healthPercents) && healthPercents.length
-          ? healthPercents[healthPercents.length - 1]
-          : null;
-        const value = Array.isArray(last) ? last[1] : null;
-
-        if (typeof value !== "number") {
-          throw new Error(`Could not find healthPercents[-1][1] for ${logUri}`);
-        }
-
-        hpCache.set(logUri, value);
-        return value;
-      }
-
-      function localDateWithTimeToUnixSeconds(hour, minute) {
-        // Matches Python's:
-        // datetime.combine(date.today(), time(19)).astimezone().timestamp()
-        // In JS: create local Date and convert to Unix seconds.
-        const now = new Date();
-        const dt = new Date(now.getFullYear(), now.getMonth(), now.getDate(), hour, minute, 0, 0);
-        return Math.floor(dt.getTime() / 1000);
-      }
-
-      function formatHp(v) {
-        // Python: f"{v:.02f}" -> always 2 decimals
-        return Number(v).toFixed(2);
-      }
-
-      function extractSortKey(logUri) {
-        // Python used: key=lambda l: l.split("-")[2]
-        // We'll apply that intent to the URI itself.
-        const parts = String(logUri).split("-");
-        return parts[2] ?? "";
-      }
-
-      function parseLines(text) {
-        return text
-          .split(/\r?\n/)
-          .map((s) => s.trim())
-          .filter(Boolean);
-      }
-
-      function parseTimeHHMM(s) {
-        const m = /^([01]\d|2[0-3]):([0-5]\d)$/.exec(String(s).trim());
-        if (!m) return null;
-        return { hour: Number(m[1]), minute: Number(m[2]) };
-      }
-
-      // ===== UI wiring =====
-      const elTitle = document.getElementById("title");
-      const elTime = document.getElementById("time");
-      const elInput = document.getElementById("input");
-      const elOutput = document.getElementById("output");
-      const elParsed = document.getElementById("parsed");
-      const elError = document.getElementById("error");
-
-      const btnRun = document.getElementById("run");
-      const btnCopy = document.getElementById("copy");
-      const btnClearOut = document.getElementById("clearOut");
-      const btnClearCache = document.getElementById("clearCache");
-
-      function setError(msg) {
-        if (!msg) {
-          elError.style.display = "none";
-          elError.textContent = "";
-          return;
-        }
-        elError.style.display = "block";
-        elError.textContent = msg;
-      }
-
-      function setRunning(isRunning) {
-        btnRun.disabled = isRunning;
-        btnRun.textContent = isRunning ? "Running…" : "Run";
-        elTitle.disabled = isRunning;
-        elTime.disabled = isRunning;
-        elInput.disabled = isRunning;
-        btnClearCache.disabled = isRunning;
-      }
-
-      function updateParsedCount() {
-        const count = parseLines(elInput.value).length;
-        elParsed.textContent = `Parsed: ${count} line${count === 1 ? "" : "s"}`;
-      }
-
-      function setOutput(text) {
-        elOutput.value = text || "";
-        const has = Boolean(text);
-        btnCopy.disabled = !has;
-        btnClearOut.disabled = !has;
-      }
-
-      elInput.addEventListener("input", updateParsedCount);
-      updateParsedCount();
-
-      btnClearCache.addEventListener("click", () => {
-        hpCache.clear();
-        setError("");
-      });
-
-      btnClearOut.addEventListener("click", () => setOutput(""));
-
-      btnCopy.addEventListener("click", async () => {
-        const text = elOutput.value;
-        if (!text) return;
-        try {
-          await navigator.clipboard.writeText(text);
-        } catch {
-          // Fallback: select + execCommand
-          elOutput.focus();
-          elOutput.select();
-          document.execCommand("copy");
-        }
-      });
-
-      btnRun.addEventListener("click", async () => {
-        setError("");
-        setOutput("");
-
-        const t = parseTimeHHMM(elTime.value);
-        if (!t) {
-          setError("Time must be HH:MM (24h), e.g. 19:00");
-          return;
-        }
-
-        const logUris = parseLines(elInput.value);
-        if (logUris.length === 0) {
-          setError("Paste at least one log URI/permalink (one per line).\n");
-          return;
-        }
-
-        setRunning(true);
-        try {
-          // data = {log_uri: cached_get_hp(log_uri) for log_uri in log_uris}
-          const entries = await Promise.all(
-            logUris.map(async (uri) => {
-              const hp = await cachedGetHp(uri);
-              return { uri, hp, key: extractSortKey(uri) };
-            })
-          );
-
-          // by_time = sorted([...], key=...)
-          entries.sort((a, b) => String(a.key).localeCompare(String(b.key)));
-
-          const lines = entries.map(({ uri, hp }) => `\`${formatHp(hp)}\` ${uri}`);
-          const ts = localDateWithTimeToUnixSeconds(t.hour, t.minute);
-          const header = `${elTitle.value || "Temple of Febe CM"} <t:${ts}:F>`;
-
-          setOutput([header, ...lines].join("\n"));
-        } catch (e) {
-          setError(e instanceof Error ? e.message : String(e));
-        } finally {
-          setRunning(false);
-        }
-      });
-    </script>
   </body>
 </html>
