Revert "Revert "Restyle home page with dedicated stylesheet""

--- a/index.html
+++ b/index.html
@@ -7,63 +7,67 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="wrap">
-      <div class="container">
-        <div class="header">
-          <h1>Projects</h1>
-          <p>A small hub for utilities and experiments. Pick a tile to jump into a project.</p>
-        </div>
+    <main class="page">
+      <header class="page-header">
+        <h1>Projects</h1>
+        <p>Utilities and experiments collected in one place. Choose a project to open it.</p>
+      </header>
 
-        <div class="grid" role="list">
-          <article class="tile" role="listitem">
-            <div class="pill" aria-hidden="true">Guild Wars 2</div>
-            <div>
-              <h2>dps.report Discord formatter</h2>
-              <p>Format dps.report logs into a Discord-friendly block with sorted HP% values.</p>
-            </div>
-            <div class="link-row" aria-hidden="true">
-              <span>Open formatter</span>
-              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M5.5 3H13V10.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </div>
-            <a class="tile-link" href="/gw2_logs_discord/">dps.report Discord formatter</a>
-          </article>
+      <div class="project-grid" role="list">
+        <article class="project-card" role="listitem">
+          <p class="project-tag" aria-hidden="true">Guild Wars 2</p>
+          <div class="project-body">
+            <h2 class="project-title">dps.report Discord formatter</h2>
+            <p class="project-description">Format dps.report logs into a Discord-friendly block with sorted HP% values.</p>
+          </div>
+          <div class="project-footer" aria-hidden="true">
+            <span>Open formatter</span>
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.5 3H13V10.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
+          <a class="stretched-link" href="/gw2_logs_discord/">
+            <span class="sr-only">Open dps.report Discord formatter</span>
+          </a>
+        </article>
 
-          <article class="tile" role="listitem">
-            <div class="pill" aria-hidden="true">Clash Royale</div>
-            <div>
-              <h2>Merge Tactics clan ranking</h2>
-              <p>Placeholder for the current season’s clan trophy leaderboard.</p>
-            </div>
-            <div class="link-row" aria-hidden="true">
-              <span>Open placeholder</span>
-              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M5.5 3H13V10.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
-              </svg>
-            </div>
-            <a class="tile-link" href="/clash_royale_merge_tactics/">Clash Royale Merge Tactics ranking</a>
-          </article>
+        <article class="project-card" role="listitem">
+          <p class="project-tag" aria-hidden="true">Clash Royale</p>
+          <div class="project-body">
+            <h2 class="project-title">Merge Tactics clan ranking</h2>
+            <p class="project-description">Placeholder for the current season’s clan trophy leaderboard.</p>
+          </div>
+          <div class="project-footer" aria-hidden="true">
+            <span>Open placeholder</span>
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.5 3H13V10.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
+          <a class="stretched-link" href="/clash_royale_merge_tactics/">
+            <span class="sr-only">Open Clash Royale Merge Tactics ranking</span>
+          </a>
+        </article>
 
-          <article class="tile" role="listitem">
-            <div class="pill" aria-hidden="true">Math lab</div>
-            <div>
-              <h2>Optimal Allocation helper</h2>
-              <p>Explore calculus-backed allocations with live tables for the next best distributions.</p>
-            </div>
-            <div class="link-row" aria-hidden="true">
-              <span>Open Upload Labs</span>
-              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M5.5 3H13V10.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </div>
-            <a class="tile-link" href="/upload_labs/">Upload Labs</a>
-          </article>
-        </div>
+        <article class="project-card" role="listitem">
+          <p class="project-tag" aria-hidden="true">Math lab</p>
+          <div class="project-body">
+            <h2 class="project-title">Optimal Allocation helper</h2>
+            <p class="project-description">Explore calculus-backed allocations with live tables for the next best distributions.</p>
+          </div>
+          <div class="project-footer" aria-hidden="true">
+            <span>Open Upload Labs</span>
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.5 3H13V10.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
+          <a class="stretched-link" href="/upload_labs/">
+            <span class="sr-only">Open Upload Labs</span>
+          </a>
+        </article>
       </div>
-    </div>
+    </main>
   </body>
 </html>
