Disable stop behavior during ranking fetch

--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
         <article class="project-card" role="listitem">
           <p class="project-tag" aria-hidden="true">Clash Royale</p>
           <div class="project-body">
-            <h2 class="project-title">Merge Tactics clan ranking</h2>
-            <p class="project-description">Placeholder for the current season’s clan trophy leaderboard.</p>
+            <h2 class="project-title">Merge Tactics clan ranking dashboard</h2>
+            <p class="project-description">Live Merge Tactics dashboard tracking the current season’s clan trophy rankings.</p>
           </div>
           <div class="project-footer" aria-hidden="true">
-            <span>Open placeholder</span>
+            <span>Open dashboard</span>
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.5 3H13V10.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
-              <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+            <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
           </div>
           <a class="stretched-link" href="/clash_royale_merge_tactics/">
-            <span class="sr-only">Open Clash Royale Merge Tactics ranking</span>
+            <span class="sr-only">Open Merge Tactics clan ranking dashboard</span>
           </a>
         </article>
 
