--- a/clash_royale_merge_tactics/index.html
+++ b/clash_royale_merge_tactics/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Clash Royale – Barebones</title>
+  <title>Clash Royale – Merge Tactics ranking</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
   <script src="app.js"></script>
