Restore original title with deprecated flag

--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
         </article>
 
         <article class="project-card" role="listitem">
-          <p class="project-tag" aria-hidden="true">Math lab</p>
+          <p class="project-tag" aria-hidden="true">Upload labs</p>
           <div class="project-body">
-            <h2 class="project-title">Optimal Allocation helper</h2>
+            <h2 class="project-title">[Deprecated] Optimal Allocation helper</h2>
             <p class="project-description">Explore calculus-backed allocations with live tables for the next best distributions.</p>
           </div>
           <div class="project-footer" aria-hidden="true">
-            <span>Open Upload Labs</span>
+            <span>Open calculator</span>
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.5 3H13V10.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
               <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </div>
           <a class="stretched-link" href="/upload_labs/">
-            <span class="sr-only">Open Upload Labs</span>
+            <span class="sr-only">Open calculator</span>
           </a>
         </article>
       </div>
