--- a/clash_royale_merge_tactics/index.html
+++ b/clash_royale_merge_tactics/index.html
@@ -4,11 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Clash Royale – Merge Tactics ranking</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-grid.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-theme-quartz-dark.css" />
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js" defer></script>
-  <script src="app.js" defer></script>
+  <script src="app.js"></script>
 </head>
 <body>
   <main class="page">
@@ -34,7 +32,7 @@
         <button id="goBtn" class="primary-action" type="button">Load clan</button>
       </div>
 
-      <div id="grid" class="grid-area ag-theme-quartz-dark"></div>
+      <div id="grid" class="grid-area"></div>
     </section>
   </main>
 </body>
